--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="CV_GILANG.pdf" target="_blank">
+                <a href="startbootstrap-sb-admin-2-gh-pages.rar" target="_blank">
                   <button class="btn">Resume</button>
                 </a>
               </li>
