--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
               <li><a href="#contact">Contact</a></li>
               <li>
                 <a href="startbootstrap-sb-admin-2-gh-pages.rar" target="_blank">
-                  <button class="btn">Resume</button>
+                  <button class="btn">Resumee</button>
                 </a>
               </li>
             </ul>
