--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
                   <button class="btn">Resumee</button>
                 </a>
               </li>
+              <li>
+                <a href="Website-Kasir-Restoran.rar" target="_blank">
+                  <button class="btn">CV</button>
+                </a>
+              </li>
             </ul>
           </nav>
 
