--- a/index.html
+++ b/index.html
@@ -23,13 +23,8 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="startbootstrap-sb-admin-2-ghF-pages.rar" target="_blank">
+                <a href="CV_GILANG.pdf" target="_blank">
                   <button class="btn">Resumee</button>
-                </a>
-              </li>
-              <li>
-                <a href="Website-Kasir-Restoran.rar" target="_blank">
-                  <button class="btn">CV</button>
                 </a>
               </li>
             </ul>
