--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
+                <a href="resume.jpg" target="_blank">
+                  <button class="btn">CV KOREA</button>
+                </a>
                 <a href="CV_GILANG.pdf" target="_blank">
                   <button class="btn">Resumee</button>
                 </a>
