--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
-    <title>LangsDev - FullStack Developer</title>
+    <title>LangsDev - Web Developer</title>
   </head>
   <body>
     <!-- Header -->
     <header>
       <div class="main-container">
+        
         <div class="nav">
           <div class="logo">
             <a href="/">GAIS</a>
@@ -23,9 +24,9 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <a href="resume.jpg" target="_blank">
+                <!-- <a href="resume.jpg" target="_blank">
                   <button class="btn">CV KOREA</button>
-                </a>
+                </a> -->
                 <a href="CV_GILANG.pdf" target="_blank">
                   <button class="btn">Resumee</button>
                 </a>
@@ -43,7 +44,7 @@
         <section id="hero">
           <div class="hero-left">
             <h1 class="hero-name">Gilang Aqshal <span>Ilham S.</span></h1>
-            Halo! Saya Gilang Aqshal Ilham Safatulloh, lulusan baru dari SMK Prestasi Prima. Usia saya 17 Tahun. Di sini, Anda akan menemukan karya-karya saya dalam teknologi, mulai dari pemrograman hingga desain web. Saya siap untuk tantangan baru dan terbuka untuk peluang kolaborasi. Terima kasih telah mengunjungi portofolio saya!
+            Halo! Saya Gilang Aqshal Ilham Safatulloh, lulusan baru dari SMK Prestasi Prima. Usia saya 18 Tahun. Di sini, Anda akan menemukan karya-karya saya dalam teknologi, mulai dari pemrograman hingga desain web. Saya siap untuk tantangan baru dan terbuka untuk peluang kolaborasi. Terima kasih telah mengunjungi portofolio saya!
           </div>
 
           <div class="hero-right">
