--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <!-- Header -->
     <header>
       <div class="main-container">
-        
+
         <div class="nav">
           <div class="logo">
             <a href="/">GAIS</a>
@@ -24,11 +24,13 @@
               <li><a href="#skills">Skills</a></li>
               <li><a href="#contact">Contact</a></li>
               <li>
-                <!-- <a href="resume.jpg" target="_blank">
-                  <button class="btn">CV KOREA</button>
-                </a> -->
                 <a href="CV_GILANG.pdf" target="_blank">
                   <button class="btn">Resumee</button>
+                </a>
+              </li>
+              <li>
+                <a href="sertifGilang.pdf" target="_blank">
+                  <button class="btn">Certificate</button>
                 </a>
               </li>
             </ul>
