--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="styles/style.css" />
     <link rel="stylesheet" href="styles/responsive.css" />
-    <title>LangsDev - Web Developer</title>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    <title>LangsDev - Web Developer Enthusiast</title>
   </head>
   <body>
     <!-- Header -->
@@ -28,11 +29,6 @@
                   <button class="btn">Resumee</button>
                 </a>
               </li>
-              <li>
-                <a href="sertifGilang.pdf" target="_blank">
-                  <button class="btn">Certificate</button>
-                </a>
-              </li>
             </ul>
           </nav>
 
@@ -46,7 +42,7 @@
         <section id="hero">
           <div class="hero-left">
             <h1 class="hero-name">Gilang Aqshal <span>Ilham S.</span></h1>
-            Halo! Saya Gilang Aqshal Ilham Safatulloh, lulusan baru dari SMK Prestasi Prima. Usia saya 18 Tahun. Di sini, Anda akan menemukan karya-karya saya dalam teknologi, mulai dari pemrograman hingga desain web. Saya siap untuk tantangan baru dan terbuka untuk peluang kolaborasi. Terima kasih telah mengunjungi portofolio saya!
+            Hallo! I'm Gilang Aqshal Ilham Safatulloh,My age 18 and Fresh Graduate From SMK PRESTASI PRIMA. Here, you will find my works in technology, from programming to web design. I am up for new challenges and open to collaboration opportunities. Thank you for visiting my portfolio!
           </div>
 
           <div class="hero-right">
@@ -60,11 +56,11 @@
     <!-- Services -->
     <section id="services">
       <div class="services main-container">
-        <h3 class="pre-title">Services</h3>
-        <h1 class="section-title services-title">Specialized In</h1>
+        <h3 class="pre-title" data-aos-duration="1000" data-aos="fade-right">Services</h3>
+        <h1 class="section-title services-title" data-aos-duration="1000" data-aos="fade-up">Specialized In</h1>
 
         <div class="grid-3">
-          <div class="service">
+          <div class="service" data-aos-duration="1000" data-aos="flip-right">
             <div class="service-icon">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -83,7 +79,7 @@
             </p>
           </div>
 
-          <div class="service">
+          <div class="service" data-aos-duration="1000" data-aos="flip-right">
             <div class="service-icon">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
@@ -102,7 +98,7 @@
             </p>
           </div>
 
-          <div class="service">
+          <div class="service" data-aos-duration="1000" data-aos="flip-right">
             <div class="service-icon">
               <svg
                 width="24"
@@ -129,12 +125,12 @@
     <!-- Portfolios -->
     <section id="portfolios">
       <div class="portfolios main-container">
-        <h3 class="pre-title">My Works</h3>
-        <h1 class="section-title">Featured Portfolios</h1>
+        <h3 class="pre-title" data-aos="fade-right-right">My Works</h3>
+        <h1 class="section-title" data-aos="fade-up">Featured Portfolios</h1>
 
         <div class="grid-3">
           <!-- Portfolio 1 -->
-          <div class="portfolio">
+          <div class="portfolio"  data-aos="zoom-in-down" data-aos-duration="500">
             <div class="portfolio-cover">
               <img
                 src="./images/portfolios/portfolio-1.png"
@@ -168,7 +164,7 @@
           </div>
 
           <!-- Portfolio 2 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="zoom-in-down" data-aos-duration="500">
             <div class="portfolio-cover">
               <img
                 src="./images/portfolios/portfolio-2.png"
@@ -202,7 +198,7 @@
           </div>
 
           <!-- Portfolio 3 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="zoom-in-down" data-aos-duration="500">
             <div class="portfolio-cover">
               <img
                 src="./images/portfolios/portfolio-3.jpg"
@@ -233,9 +229,10 @@
         </div>
         <!-- session grid 2 -->
         <div class="grid-3">
+
            <!-- portfolio 4 -->
            
-            <div class="portfolio">
+            <div class="portfolio" data-aos="zoom-in-down" data-aos-duration="500">
               <div class="portfolio-cover">
                 <img
                   src="./images/portfolios/kasir.png"
@@ -265,7 +262,7 @@
             </div>
 
              <!-- Portfolio 5 -->
-          <div class="portfolio">
+          <div class="portfolio" data-aos="zoom-in-down" data-aos-duration="500">
             <div class="portfolio-cover">
               <img
                 src="./images/portfolios/SK.jpg"
@@ -298,8 +295,8 @@
             </div>
           </div>
 
-          <!-- Portfolio 2 -->
-          <div class="portfolio">
+          <!-- Portfolio 6 -->
+          <div class="portfolio"  data-aos="zoom-in-down" data-aos-duration="500">
             <div class="portfolio-cover">
               <img
                 src="./images/portfolios/LOGIN.jpg"
@@ -338,16 +335,7 @@
 
         <div class="skills-grid">
           <div class="skills-left">
-            <div class="education">
-              <div class="line">
-                <div></div>
-              </div>
-              <div class="education-info">
-                <h4 class="education-title">SD NEGERI 01 BEKASI</h4>
-                <p></p>
-                <h4 class="education-years">2012 - 2018</h4>
-              </div>
-            </div>
+          
             <div class="education">
               <div class="line">
                 <div></div>
@@ -364,7 +352,7 @@
               </div>
               <div class="education-info">
                 <h4 class="education-title">SMK PRESTASI PRIMA</h4>
-                <p>REKAYA PERANGKAT LUNAKK (RPL)</p>
+                <p>REKAYA PERANGKAT LUNAK (RPL)</p>
                 <h4 class="education-years">2021 - 2024</h4>
               </div>
             </div>
@@ -372,7 +360,7 @@
 
           <div class="skills-right">
             <p>
-              Selama lebih dari 3 tahun, saya terus belajar dibidang front-end dan bereksperimen dengan teknologi dan framework,dan disini anda dapat melihat ringkasan keahlian saya.Bidang Front-end dan bereksperimen dengan teknologi baru.
+              Selama 3 tahun, saya terus belajar dibidang web developer dan bereksperimen dengan teknologi dan framework,dan disini anda dapat melihat ringkasan keahlian saya.Bidang Web Developer dan bereksperimen dengan teknologi baru.
             </p>
 
             <div class="skills-list">
@@ -442,7 +430,7 @@
             </div>
             <div class="contact-item-detail">
               <h4>Address</h4>
-              <p>JL.TARUNA 3 JATIWARINGIN,PONDOK GEDE,KOTA BEKASI</p>
+              <p>JL.Ar-Royyan, JATIWARINGIN,PONDOK GEDE,KOTA BEKASI</p>
             </div>
           </div>
 
@@ -461,7 +449,7 @@
             </div>
             <div class="contact-item-detail">
               <h4>Phone</h4>
-              <p>081292700357</p>
+              <p>0812xxxxxxxx</p>
             </div>
           </div>
 
@@ -504,7 +492,7 @@
           </svg>
         </a>
 
-        <a href="#">
+        <a href="https://www.linkedin.com/in/gilang-aqshal-84a3212a7/">
           <svg
             xmlns="http://www.w3.org/2000/svg"
             width="20"
@@ -551,5 +539,9 @@
     <!-- End Footer -->
 
     <script src="js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init();
+    </script>
   </body>
 </html>
